TestSuite/errors/err0140.pas
begin
case [] of
1 : writeln(2);
end;
end.